# upgrade-dependencies

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ruff.toml  todo.md
.github/: labels.yml  release-drafter.yml
.github/workflows/: ci.yml  labeler.yml  release.yml
docs/: usage.md
examples/: test.ipynb
src/upgrade_dependencies/: __init__.py  __main__.py  dependency.py  github_dependency.py  main.py  project.py  utils.py
